# fastapi-uv-demo

./: README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/: test_main.py
